<?xml version="1.0"?>
<package format="2">
  <name>yumi_description</name>
  <version>0.0.4</version>
  <description>The yumi_description package</description>

  <maintainer email="nuk1@todo.todo">nuk1</maintainer>

  <license>BSD</license>

 

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
